--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				<li id="li-first"><a href="#anchor-music">Music</a></li>
 				<li class="li-middle"><a href="#anchor-tour">Tour</a></li>
 				<li class="li-middle"><a href="#anchor-video">Video</a></li>
-				<li class="li-middle"><a href="#anchor-merch">Merch</a></li>
+			<!--	<li class="li-middle"><a href="#anchor-merch">Merch</a></li> !-->
 				<li class="li-middle"><a href="#anchor-about">About</a></li>
 				<li class="li-middle"><a href="#anchor-download">Download</a></li>
 				<li id="li-last"><a href="#anchor-contact">Contact</a></li>
@@ -707,6 +707,7 @@
 
 </body>
 </html>
+
 
 
 
