--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 			  </tbody>
 			</table>
 
-		<img src="RISE/img-shop.jpg" class="responsive" alt="Whattabeautifulitems"/>	
+		<!--<img src="RISE/img-shop.jpg" class="responsive" alt="Whattabeautifulitems"/>	!-->
 	
 </div>
 
@@ -707,6 +707,7 @@
 
 </body>
 </html>
+
 
 
 
