--- a/index.html
+++ b/index.html
@@ -501,12 +501,12 @@
 			  <tbody>
 				<tr valign="middle">
 				  <td><a href="https://shop.dreamshade.ch" title="Worldwide shop" target="new">Worldwide shop</a></td>
-				  <!--<td id="td-right"><a href="https://www.nightshiftmerch.com/collections/dreamshade" title="USA/CAN only shop" target="new">USA/CAN only</a></td>!-->
+				  <td id="td-right"><a href="https://www.nightshiftmerch.com/collections/dreamshade" title="USA/CAN only shop" target="new">USA/CAN only</a></td>
 				</tr>
 			  </tbody>
 			</table>
 
-		<!--<img src="RISE/img-shop.jpg" class="responsive" alt="Whattabeautifulitems"/>	!-->
+		<img src="RISE/img-shop.jpg" class="responsive" alt="Whattabeautifulitems"/>	
 	
 </div>
 
@@ -707,6 +707,7 @@
 
 </body>
 </html>
+
 
 
 
