Enhance test layout with band imagery and hero

--- a/test/index.html
+++ b/test/index.html
@@ -19,14 +19,33 @@
   </header>
 
   <section class="hero" id="top">
-    <div class="hero-overlay"></div>
+    <div class="hero-bg"></div>
+    <div class="hero-gradient"></div>
     <div class="hero-content">
-      <h1>DREAMSHADE</h1>
-      <p class="tagline">Modern metal from Switzerland.</p>
-      <div class="hero-buttons">
-        <!-- TODO: replace # with real links -->
-        <a href="#listen" class="btn primary">Listen</a>
-        <a href="#tour" class="btn secondary">Tour dates</a>
+      <div class="hero-main">
+        <h1>DREAMSHADE</h1>
+        <p class="tagline">Modern metal from Switzerland.</p>
+        <p class="hero-sub">
+          Melodic hooks, heavy riffs and electronic textures. A modern metal
+          sound built for big stages and late‑night headphones.
+        </p>
+        <div class="hero-buttons">
+          <!-- TODO: replace # with real links -->
+          <a href="#listen" class="btn primary">Listen now</a>
+          <a href="#tour" class="btn secondary">Tour dates</a>
+        </div>
+      </div>
+      <div class="hero-album">
+        <div class="hero-album-inner"></div>
+        <div class="hero-album-meta">
+          <h3>Rise</h3>
+          <span>Latest album</span>
+          <div class="hero-platforms">
+            <!-- Replace # with real URLs -->
+            <a href="#"><img src="assets/img/icon-spotify.png" alt="Spotify" /></a>
+            <a href="#"><img src="assets/img/icon-yt.png" alt="YouTube" /></a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -38,11 +57,10 @@
         <h2>New Release</h2>
         <div class="release-grid">
           <div class="release-cover">
-            <!-- TODO: replace placeholder with real cover -->
-            <div class="cover-placeholder">Album Cover</div>
+            <div class="cover-art"></div>
           </div>
           <div class="release-info">
-            <h3>Title of the latest album / single</h3>
+            <h3>Rise</h3>
             <p>
               Short description of the release. Replace this text with the
               actual copy you use now on dreamshade.ch.
@@ -101,8 +119,7 @@
     <section class="section section-alt" id="band">
       <div class="section-inner band-layout">
         <div class="band-photo">
-          <!-- TODO: replace with real band photo -->
-          <div class="band-photo-placeholder">Band Photo</div>
+          <img src="assets/img/band-wide.jpg" alt="Dreamshade band" />
         </div>
         <div class="band-bio">
           <h2>Band</h2>
@@ -142,7 +159,7 @@
   <footer class="site-footer">
     <div class="footer-inner">
       <span>DREAMSHADE</span>
-      <span class="footer-copy">&copy; <!-- TODO: year --> 2026</span>
+      <span class="footer-copy">&copy; 2026</span>
     </div>
   </footer>
 </body>
